[package]
name = "xbgdump"
version = "0.1.3"
authors = ["FallenWarrior2k <mail@fallenwarrior.me>"]
description = "CLI tool to dump the X11 background to a file"
homepage = "https://github.com/FallenWarrior2k/xbgdump"
repository = "https://github.com/FallenWarrior2k/xbgdump"
license = "MIT"
readme = "README.md"
edition = "2018"
exclude = [
    ".github/**",
    ".gitignore"
]

[dependencies]
anyhow = "1.0.40"
image = { version = "0.23.14", default-features = false, features = ["png", "pnm"] }
imageproc = { version = "0.22.0", default-features = false }
x11rb = "0.8.1"

[profile.release]
lto = true
codegen-units = 1
