[package]
name = "xbgdump"
version = "0.1.5"
authors = ["FallenWarrior2k <mail@fallenwarrior.me>"]
description = "CLI tool to dump the X11 background to a file"
homepage = "https://github.com/FallenWarrior2k/xbgdump"
repository = "https://github.com/FallenWarrior2k/xbgdump"
license = "MIT"
readme = "README.md"
edition = "2018"
exclude = [
    ".github/**",
    ".gitignore"
]

[dependencies]
anyhow = "1.0.40"
getopts = "0.2.21"
image = { version = "0.23.14", default-features = false, features = ["png", "pnm"] }
x11rb = { version = "0.8.1", features = ["randr"] }

[profile.release]
lto = true
codegen-units = 1
